feat: implementando a logica de deleção de arquivos e imgs do banco de dados