@@ -14,87 +14,98 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors; // Import necessário
 
 @Service
 public class ProductService {
+
     private final ProductRepository productRepository;
     private final MinioClient minioClient;
     private final String bucketName;
     private final String minioEndpoint;
 
-
     public ProductService(ProductRepository productRepository,
                           MinioClient minioClient,
                           @Value("${minio.bucket-name}") String bucketName,
-                          @Value("${minio.bucket.endpoint") String minioEndpoint) {
-
+                          @Value("${minio.endpoint}") String minioEndpoint) {
         this.productRepository = productRepository;
         this.minioClient = minioClient;
         this.bucketName = bucketName;
         this.minioEndpoint = minioEndpoint;
     }
 
-
-
-    @Transactional //tudo funciona ou nada é salvo no banco
-    public ProductResponseDTO createProduct(ProductRequestDTO productDTO, List<MultipartFile> files){
-
-        //Dados do Produto.
+    @Transactional
+    public ProductResponseDTO createProduct(ProductRequestDTO productDTO, List<MultipartFile> files) {
         Product product = new Product();
         product.setName(productDTO.getName());
-        product.setDesciption(productDTO.getDesciption());
-        product.setDesciption(productDTO.getDesciption());
+        product.setDescription(productDTO.getDescription());
         Product savedProduct = productRepository.save(product);
 
-        //Upload das Imagens
-        int discplayOrder = 1;
+        int displayOrder = 1;
         for (MultipartFile file : files) {
-            try{
-                //Gera id unico para evitar conflitos
+            try {
                 String fileName = savedProduct.getId() + "-" + UUID.randomUUID() + "-" + file.getOriginalFilename();
 
-                //upload para o MinIO
                 minioClient.putObject(
                         PutObjectArgs.builder()
                                 .bucket(bucketName)
                                 .object(fileName)
-                                .stream(file.getInputStream(),file.getSize(), -1)
-                                .contentType(file.getContentType()).build()
+                                .stream(file.getInputStream(), file.getSize(), -1)
+                                .contentType(file.getContentType())
+                                .build()
                 );
 
-                //PUBLIC URL
                 String imageUrl = String.format("%s/%s/%s", this.minioEndpoint, this.bucketName, fileName);
 
-                //Cria  e salva a entidade  ProductImage
                 ProductImage productImage = new ProductImage();
                 productImage.setImageUrl(imageUrl);
-                productImage.setDisplayOrder(discplayOrder++);
+                productImage.setDisplayOrder(displayOrder++);
                 savedProduct.addImage(productImage);
 
             } catch (Exception e) {
-                //caso aja erro, lança uma exceção para o Spring reverter a transação
-                throw new RuntimeException("Erro ao fazer upload do arquivo" + e.getMessage(), e);
+                throw new RuntimeException("Erro ao fazer upload do arquivo: " + e.getMessage(), e);
             }
-
         }
-        //salva o produto novamente com as img associadas
-        Product finalProduct = productRepository.save(savedProduct);
-        //retorna o DTO de resposta
-        return ProductResponseDTO.fromEntity(finalProduct);
 
+        Product finalProduct = productRepository.save(savedProduct);
+        return ProductResponseDTO.fromEntity(finalProduct);
     }
 
-    public List<ProductResponseDTO> listAllProducts(){
+
+    @Transactional(readOnly = true) // readOnly = true é uma otimização para consultas
+    public List<ProductResponseDTO> findAllProducts() {
         return productRepository.findAll().stream()
                 .map(ProductResponseDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public ProductResponseDTO findProductById(long id) {
-        Product product =  productRepository.findById(id)
+
+    @Transactional(readOnly = true)
+    public ProductResponseDTO findProductById(Long id) {
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Produto não encontrado com id: " + id));
         return ProductResponseDTO.fromEntity(product);
     }
 
-}
+    @Transactional
+    public void deleteProduct(Long id) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Produto não encontrado com id: " + id) );
 
+        for (ProductImage image : product.getImages()) {
+            try {
+                String objectName = image.getImageUrl().substring(image.getImageUrl().lastIndexOf("/") + 1);
+
+                minioClient.removeObject(
+                        io.minio.RemoveObjectArgs.builder()
+                                .bucket(bucketName)
+                                .object(objectName)
+                                .build()
+                );
+            }catch (Exception e) {
+                System.err.println("Erro ao remover arquivo do Minio: " + e.getMessage());
+            }
+        }
+    }
+    productRepository.delete(product);
+}
